# minesweeper_console

./: .clang-format  CMakeLists.txt  Makefile  mine_board.cpp  mine_board.h  minesweeper.cpp
include/: mine_board.h  mine_drawer.h
src/: main.cpp  mine_board.cpp  mine_drawer.cpp
